--- a/notebook/breaking_ML.ipynb
+++ b/notebook/breaking_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNt971dVeXqXlO1JeaPGktY",
+      "authorship_tag": "ABX9TyMIWU+n2mYrJNWiVV0lQolC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Adversarial machine learning algorithms**\n",
+        "# **Adversarial machine learning**\n",
         "\n",
         "> Adversarial machine learning est l'art d'étudier comment casser et sécuriser les modèles d'apprentissage automatique"
       ],
