--- a/notebook/detection_PE_Headers.ipynb
+++ b/notebook/detection_PE_Headers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYAIeqKTbRxG9mpx3NQ6GS",
+      "authorship_tag": "ABX9TyOgTOHs1/kZZhgjs80uJOh8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,12 +87,12 @@
       "metadata": {
         "id": "m64qika5G77M"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -989,7 +989,7 @@
         "id": "Q4U6Ai35Nxfi",
         "outputId": "c51f9d12-3815-4350-afd8-3f3e3f230683"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,7 +1079,7 @@
         "id": "41yQIYEoOBqW",
         "outputId": "bda50c8c-b1c5-4f7e-c54c-5a52714cea0d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1681,168 +1681,85 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
+        "### 🟩 **Test d'autres modèles:**"
       ],
       "metadata": {
-        "id": "ekjl-mPZ8LWs"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 🧩**Gradient Boosting**\n",
-        "\n",
-        "Le Gradient Boosting est une méthode d'apprentissage supervisé très puissante, utilisée pour la classification et la régression.  \n",
-        "\n",
-        "### Comment ça fonctionne :\n",
-        "1. Il construit une **série d'arbres de décision faibles (weak learners)**, chacun corrigeant les erreurs du précédent.  \n",
-        "2. Chaque nouvel arbre est entraîné pour **minimiser les erreurs résiduelles** des arbres précédents.  \n",
-        "3. Les prédictions finales sont obtenues en **combinant tous les arbres**, généralement par une somme pondérée.\n",
-        "\n",
-        "### Pourquoi l’utiliser pour la détection de malwares :\n",
-        "- Très efficace pour capturer des **patterns complexes dans les données**.  \n",
-        "- Peut améliorer la précision par rapport à un **Random Forest** simple.  \n",
-        "- Permet de **réduire les faux positifs et faux négatifs** si bien paramétré.\n"
-      ],
-      "metadata": {
-        "id": "88bmOcsf7kBG"
+        "id": "CrdxkKSbQf-s"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "classif_gradient = sklearn.ensemble.GradientBoostingClassifier(n_estimators=50)\n",
-        "classif_gradient.fit(X_train, y_train)\n",
-        "score_gradient = classif_gradient.score(X_test, y_test)\n",
-        "print(\"The accuracy of the algorithm is: %s\" %(score_gradient*100))"
+        "# ==============================\n",
+        "# Experiments multi-modèles\n",
+        "# ==============================\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")\n",
+        "\n",
+        "# imports complémentaires\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "from sklearn.model_selection import cross_validate, StratifiedKFold\n",
+        "from sklearn.metrics import (accuracy_score, f1_score, recall_score, precision_score,\n",
+        "                             roc_auc_score, average_precision_score, precision_recall_curve,\n",
+        "                             roc_curve)\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "try:\n",
+        "    from xgboost import XGBClassifier\n",
+        "except Exception:\n",
+        "    XGBClassifier = None\n",
+        "try:\n",
+        "    from lightgbm import LGBMClassifier\n",
+        "except Exception:\n",
+        "    LGBMClassifier = None\n",
+        "try:\n",
+        "    from catboost import CatBoostClassifier\n",
+        "except Exception:\n",
+        "    CatBoostClassifier = None\n",
+        "\n",
+        "# Réglage CV\n",
+        "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EljMIusz7jeP",
-        "outputId": "0d199905-f64e-4a5a-9aef-d599b52686c1"
+        "id": "XGXa5U4BQpSz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The accuracy of the algorithm is: 98.86635277073525\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "---\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "XIKJuJgv9I7G"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **AdaBoost Classifier**\n",
-        "\n",
-        "**AdaBoost** (Adaptive Boosting) est une méthode d'**apprentissage supervisé** utilisée pour la classification (et parfois la régression).  \n",
-        "\n",
-        "### Principe de fonctionnement :\n",
-        "1. AdaBoost construit une **série de classifieurs faibles** (souvent des petits arbres de décision).  \n",
-        "2. Chaque nouvel arbre se concentre **sur les erreurs des classifieurs précédents** :  \n",
-        "   - Les exemples mal classés reçoivent un **poids plus élevé** pour être mieux appris par le classifieur suivant.  \n",
-        "3. Les prédictions finales sont obtenues en **combinant tous les classifieurs** avec un système de **votes pondérés**.\n",
-        "\n",
-        "### Pourquoi l’utiliser pour la détection de malwares :\n",
-        "- Il est capable de **corriger progressivement les erreurs** sur les fichiers difficiles à classer.  \n",
-        "- Peut améliorer la **précision globale** et réduire les **faux positifs et faux négatifs**.  \n",
-        "- Plus simple et souvent plus rapide à entraîner que le Gradient Boosting, tout en restant performant.\n"
-      ],
-      "metadata": {
-        "id": "tsuhuQps80T4"
-      }
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "classif_adboost = sklearn.ensemble.AdaBoostClassifier(n_estimators=100)\n",
-        "classif_adboost.fit(X_train, y_train)\n",
-        "score_adboost = classif_adboost.score(X_test, y_test)\n",
-        "print(\"The accuracy of the algorithm is: %s\" %(score_adboost*100))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0QWK2-3L9VTo",
-        "outputId": "35a20117-cdf7-4a5e-d32f-141abe822e2b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The accuracy of the algorithm is: 98.61282144150671\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **XGBoost**"
-      ],
-      "metadata": {
-        "id": "j8LjVGlrD-fZ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import xgboost as xgb\n",
+        "models = {\n",
+        "    \"LogisticRegression\": LogisticRegression(max_iter=2000, class_weight='balanced', random_state=42),\n",
+        "    \"DecisionTree\": DecisionTreeClassifier(random_state=42, class_weight='balanced'),\n",
+        "    \"RandomForest\": RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1, class_weight='balanced'),\n",
+        "    \"ExtraTrees\": ExtraTreesClassifier(n_estimators=100, random_state=42, n_jobs=-1),\n",
+        "    \"KNN\": KNeighborsClassifier(),\n",
+        "    \"SVM\": SVC(probability=True, random_state=42),\n",
+        "    \"MLP\": MLPClassifier(max_iter=300, random_state=42)\n",
+        "}\n",
         "\n",
-        "classif_xgb = xgb.XGBClassifier(objective='binary:logistic', n_estimators=100, use_label_encoder=False, eval_metric='logloss')\n",
-        "classif_xgb.fit(X_train, y_train)\n",
-        "score_xgb = classif_xgb.score(X_test, y_test)\n",
-        "print(\"The accuracy of the XGBoost algorithm is: %s\" %(score_xgb*100))"
+        "# Ajouter XGBoost / LightGBM / CatBoost si disponibles (préférer des paramètres simples pour test initial)\n",
+        "if XGBClassifier is not None:\n",
+        "    models[\"XGBoost\"] = XGBClassifier(use_label_encoder=False, eval_metric='logloss', random_state=42, n_jobs=-1)\n",
+        "if LGBMClassifier is not None:\n",
+        "    models[\"LightGBM\"] = LGBMClassifier(random_state=42, n_jobs=-1)\n",
+        "if CatBoostClassifier is not None:\n",
+        "    models[\"CatBoost\"] = CatBoostClassifier(verbose=0, random_state=42)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1F6c87BdEK3z",
-        "outputId": "a7dff00d-80f1-48b7-dffb-21609cf68cf6"
+        "id": "up64sbzVRkfs"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/xgboost/training.py:183: UserWarning: [18:29:10] WARNING: /workspace/src/learner.cc:738: \n",
-            "Parameters: { \"use_label_encoder\" } are not used.\n",
-            "\n",
-            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The accuracy of the XGBoost algorithm is: 99.28649040202825\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
